<resources>
    <string name="app_name">图片编辑</string>

    <string name="finish">完成</string>

    <string name="main_activity_title">图片编辑</string>
    <string name="debug_activity_title">图片编辑调试页面</string>

    <string name="select_file">选择图片</string>
    <string name="select_photo">图片选择器</string>
    <string name="run_jna">执行so库中方法</string>

    <string name="erase_pen">擦除笔功能</string>
    <string name="erase_pen_size_text">尺寸</string>
    <string name="erase_btn_text">GO</string>


</resources>